<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ConnorWhite.inclusiveu.Home"
    android:background="#e1ddd2"
    android:onClick="launchIGWY">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        ></include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/home_title"
        android:textColor="@color/fontLight"
        android:elevation="5dp"
        android:textSize="24sp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/tool_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/home_scroll_view"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/tool_bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/developer_text">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/gir_map"
                android:id="@+id/map_button"
                android:background="@color/colorPrimary"
                android:padding="15dp"
                android:textColor="@color/fontLight"
                android:textSize="20sp"
                android:clickable="false"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0dp"
                android:textStyle="normal"
                android:onClick="launchAGRMap" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/libraries_map"
                android:id="@+id/libraries_map_button"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:padding="15dp"
                android:textColor="@color/fontLight"
                android:textSize="20sp"
                android:layout_below="@+id/map_button"
                android:layout_centerHorizontal="true"
                android:textStyle="normal"
                android:onClick="launchLibMap" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/library_specialists"
                android:id="@+id/library_specialists_button"
                android:layout_below="@+id/libraries_map_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/fontLight"
                android:padding="15dp"
                android:textSize="20sp"
                android:onClick="goToLibSpec"
                android:textStyle="normal" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/partners"
                android:id="@+id/partners_button"
                android:layout_below="@+id/library_specialists_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/fontLight"
                android:padding="15dp"
                android:textSize="20sp"
                android:textStyle="normal"
                android:onClick="launchPartners" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:id="@+id/about_button"
                android:layout_below="@+id/partners_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/fontLight"
                android:padding="15dp"
                android:textSize="20sp"
                android:textStyle="normal"
                android:onClick="launchAbout" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/development"
                android:id="@+id/dev_button"
                android:layout_below="@+id/about_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/fontLight"
                android:padding="15dp"
                android:textSize="20sp"
                android:textStyle="normal"
                android:onClick="launchDevelopment" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/IGWY_button"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/igwy"
                android:scaleType="fitStart"
                android:layout_below="@+id/dev_button"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/igwy_alt"
                android:onClick="goToIGWY"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="#00bf5700"
                android:adjustViewBounds="true" />
        </RelativeLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/developer_connor_white"
        android:id="@+id/developer_text"
        android:linksClickable="false"
        android:autoText="false"
        android:textColor="@color/fontMed"
        android:textStyle="italic"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:onClick="goToPlayStore" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/version_0_9_1"
        android:id="@+id/version_text"
        android:textColor="@color/fontMed"
        android:textStyle="italic"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingBottom="5dp"
        android:paddingRight="15dp" />

</RelativeLayout>
