<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ConnorWhite.inclusiveu.Development"
    android:background="#e1ddd2">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        ></include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/development"
        android:id="@+id/development_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:elevation="5dp"
        android:textColor="@color/fontLight"
        android:textSize="24sp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_alignBottom="@+id/tool_bar" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/developer_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/home"
        android:elevation="5dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:scaleType="fitEnd"
        android:contentDescription="@string/home_alt"
        android:onClick="launchHome"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/clear"
        android:layout_alignBottom="@+id/tool_bar" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
        android:layout_below="@+id/tool_bar"
        android:layout_above="@+id/developer_text">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/credit"
                android:id="@+id/credit_text"
                android:textColor="@color/fontDark"
                android:textSize="18sp"
                android:textAlignment="center"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/feedback"
                android:id="@+id/feedback_email_text"
                android:textSize="18sp"
                android:textColor="@color/fontDark"
                android:textAlignment="center"
                android:autoLink="web|email"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="40dp"
                android:layout_below="@+id/credit_text"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:id="@+id/contact_button"
                android:textColor="@color/fontLight"
                android:textSize="18sp"
                android:background="@color/colorPrimary"
                android:onClick="goToContact"
                android:padding="15dp"
                android:layout_marginTop="40dp"
                android:layout_below="@+id/feedback_email_text"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/feedback_form_text"
                android:textColor="@color/fontDark"
                android:textSize="18sp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/improve"
                android:textAlignment="center"
                android:layout_marginTop="40dp"
                android:layout_below="@+id/contact_button"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback_button"
                android:id="@+id/feedback_buttom"
                android:textSize="18sp"
                android:background="@color/colorPrimary"
                android:padding="15dp"
                android:onClick="goToFeedback"
                android:textColor="@color/fontLight"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/feedback_form_text"
                android:layout_marginTop="40dp" />

        </RelativeLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/developer_connor_white"
        android:id="@+id/developer_text"
        android:linksClickable="false"
        android:autoText="false"
        android:textColor="@color/fontMed"
        android:textStyle="italic"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingBottom="5dp"
        android:onClick="goToPlayStore" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/version_0_9_1"
        android:id="@+id/version_text"
        android:textColor="@color/fontMed"
        android:textStyle="italic"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
